Fixed kwiki:docs target to correctly attach, and filled out some documentation

--- a/kwiki-maven-plugin/pom.xml
+++ b/kwiki-maven-plugin/pom.xml
@@ -100,5 +100,6 @@
 	<properties>
 		<maven.project.api.version>2.2.1</maven.project.api.version>
 	</properties>
+	<name>Kwiki Maven Plugin</name>
 </project>
 
