--- a/kwiki-core/pom.xml
+++ b/kwiki-core/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
 			<artifactId>swc-engine</artifactId>
-			<version>1.0.0</version>
+			<version>${sweble.version}</version>
 		</dependency>
 
 		<dependency>
@@ -50,5 +50,10 @@
 	</repositories>
 
 
+	<properties>
+		<!-- <sweble.version>1.0.0</sweble.version> -->
+		<sweble.version>1.1.1-SNAPSHOT</sweble.version>
+		<!-- <sweble.version>2.0.0-alpha-3-SNAPSHOT</sweble.version> -->
+	</properties>
 </project>
 
