--- a/kwiki-http-server/pom.xml
+++ b/kwiki-http-server/pom.xml
@@ -73,5 +73,12 @@
 		</plugins>
 	</build>
 
+	<scm>
+		<url>https://github.com/custom-koncept-ltd/kwiki.git</url>
+		<developerConnection>nicholas Krul</developerConnection>
+	</scm>
+	<issueManagement>
+		<url>https://github.com/custom-koncept-ltd/kwiki/issues</url>
+	</issueManagement>
 </project>
 
