--- a/kwiki-http-server/pom.xml
+++ b/kwiki-http-server/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>koncept.kwiki</groupId>
+		<groupId>com.kncept.kwiki</groupId>
 		<artifactId>kwiki-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -15,12 +15,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>koncept.http</groupId>
-			<artifactId>sun-legacy</artifactId>
-			<version>7</version>
+			<groupId>com.kncept.httpserver</groupId>
+			<artifactId>koncept-full</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 		<dependency>
-			<groupId>koncept.kwiki</groupId>
+			<groupId>com.kncept.kwiki</groupId>
 			<artifactId>kwiki-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
