--- a/kwiki-maven-plugin/pom.xml
+++ b/kwiki-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>maven-plugin</packaging>
 
 	<parent>
-		<groupId>koncept.kwiki</groupId>
+		<groupId>com.kncept.kwiki</groupId>
 		<artifactId>kwiki-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -16,7 +16,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>koncept.kwiki</groupId>
+			<groupId>com.kncept.kwiki</groupId>
 			<artifactId>kwiki-http-server</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
