--- a/kwiki-core/pom.xml
+++ b/kwiki-core/pom.xml
@@ -12,10 +12,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-
 	<dependencies>
-
-		<!-- Sweble Wikitext Components -->
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
 			<artifactId>swc-engine</artifactId>
@@ -26,8 +23,11 @@
 			<artifactId>markdown4j</artifactId>
 			<version>2.2-cj-1.0</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
