--- a/kwiki-maven-plugin/pom.xml
+++ b/kwiki-maven-plugin/pom.xml
@@ -19,6 +19,25 @@
 			<artifactId>kwiki-http-server</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.0</version>
+  </dependency>
+		
+		<!--
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		-->
 
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
@@ -74,6 +93,7 @@
 
 	<build>
 		<plugins>
+
 			<!-- solution provided by http://stackoverflow.com/questions/18999401/basic-maven-plugin-project-not-working-mojo-plugin-descriptors-not-generating -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
